force-app/main/default/objects/ssot__InPersonEngagement__dlm/fields/ssot__AttendanceStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AttendanceStatus__c</fullName>
    <label>Attendance Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AttendanceStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>