force-app/main/default/objects/ssot__InPersonEngagement__dlm/fields/ssot__rel_1719820317573_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820317573_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InPersonEngagement_InPersonMeetingId_rel</label>
    <referenceTo>ssot__InPersonMeeting__dlm</referenceTo>
    <relationshipLabel>InPersonEngagement_InPersonMeetingId_rel</relationshipLabel>
    <relationshipName>rel_1719820317573_end</relationshipName>
    <type>Lookup</type>
</CustomField>