force-app/main/default/objects/ssot__InPersonEngagement__dlm/fields/ssot__rel_1720024260861_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024260861_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InPersonEngagement_EngagementActionI_rel</label>
    <referenceTo>ssot__EngagementAction__dlm</referenceTo>
    <relationshipLabel>InPersonEngagement_EngagementActionI_rel</relationshipLabel>
    <relationshipName>rel_1720024260861_end</relationshipName>
    <type>Lookup</type>
</CustomField>